fix(sidenav): parents are links collapse button positioning inside menu item #421

--- a/src/tedi/components/layout/sidenav/sidenav.module.scss
+++ b/src/tedi/components/layout/sidenav/sidenav.module.scss
@@ -238,7 +238,7 @@
   + .tedi-sidenav__link-collapse-wrapper
   [data-name='collapse-trigger'] {
   position: absolute;
-  top: calc(var(--navigation-vertical-item-min-height-medium) / 3);
+  top: calc((var(--navigation-vertical-item-min-height-large) - var(--button-xs-icon-size)) / 2);
   right: var(--navigation-vertical-item-padding-right);
   display: flex;
   align-items: center;
